--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 
 <head>
     <title>Calculator</title>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
+    <link rel='stylesheet' href='style.css'>
 </head>
 
 <body>
-
     <!-- Math.js library: mathjs.org -->
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/2.4.0/math.min.js"></script>
     <script src="calculator.js"></script>
 </body>
