--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
-    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel='stylesheet' href='style.css'>
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel='stylesheet' href='css/animate.css'>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 
 <body>
     <!-- Math.js library: mathjs.org -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.1/clipboard.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/2.4.0/math.min.js"></script>
     <script src="calculator.js"></script>
 </body>
